<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <View style="@style/GrayLineStyle_Hor" />

            <RelativeLayout
                android:id="@+id/rl_fast_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/select_fast_mode"
                android:padding="@dimen/RlPadding"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_fast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/fastTime"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/fastMode"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />
            </RelativeLayout>

            <View style="@style/GrayLineStyle_Hor" />

            <RelativeLayout
                android:id="@+id/rl_normal_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/select_normal_mode"
                android:padding="@dimen/RlPadding"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/normalTime"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/normalMode"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />
            </RelativeLayout>

            <View style="@style/GrayLineStyle_Hor" />

            <RelativeLayout
                android:id="@+id/rl_standard_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/select_standard_mode"
                android:padding="@dimen/RlPadding"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_standard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/standardTime"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/standardMode"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />
            </RelativeLayout>

            <View style="@style/GrayLineStyle_Hor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_user"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/select_history"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/userList"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver" />

                <RelativeLayout
                    android:id="@+id/rl_set"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/select_setting"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/setting"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />
                </RelativeLayout>

            </LinearLayout>

            <View style="@style/GrayLineStyle_Hor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_data"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/select_other"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dataList"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver" />

                <RelativeLayout
                    android:id="@+id/rl_about"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/select_about"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/about"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize" />

                </RelativeLayout>

            </LinearLayout>

            <View style="@style/GrayLineStyle_Hor" />

            <RelativeLayout
                android:id="@+id/ble_mode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/RlHeight"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/shape_n_01"
                android:padding="@dimen/RlPadding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_bluetooth" />

                <TextView
                    android:id="@+id/ble_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>