<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="测试类型："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_bakeEye"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_n4"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:layout_weight="1"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bare_eye"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/bake_eye"/>

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_correction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/shape_n7"
                    android:padding="@dimen/RlPadding"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_correction"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/corrective"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/c5"
                android:text="（测试类型只能二选一，灰色为非选中状态）"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="双眼类型："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_od"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_n7"
                    android:padding="@dimen/RlPadding"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OD"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/OD"/>

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_os"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_n9"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OS"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/OS"/>

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_ou"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:background="@drawable/shape_n5"
                    android:padding="@dimen/RlPadding"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OU"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/OU"/>
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/c5"
                android:text="（双眼类型可多选，至少选中一种状态，灰色为非选中状态）"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="视标大小："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_size"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_n4"
                    android:padding="@dimen/RlPadding"
                    android:clickable="true"
                    android:layout_weight="2"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize"
                        android:textColor="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="视标大小"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="开始测试方式："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_start_qrCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_n9"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="扫码"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_start_list"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_n7"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="列表"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="数据导入导出："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_read_xls"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_n7"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="导入"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_write_xls"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_n5"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="导出"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/n7"
                android:text="数据管理："/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_delete_history"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="清空历史记录"
                    android:textSize="26sp"
                    android:background="@drawable/shape_n6"/>

                <View style="@style/GrayLineStyle_Ver"/>

                <RelativeLayout
                    android:id="@+id/rl_write_qrCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_n8"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="生成二维码"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>